# HVAC

./: .dockerignore  .editorconfig  .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  compose.example.yml  config.yaml  deny.toml  deploy.sh  install.sh  key.gpg  rust-toolchain.toml
.claude/rules/: git.md  project.md  rust.md
.claude/skills/: deploy.md
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.hooks/: pre-commit
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: ARCHITECTURE.md  NAS.md  RELEASE.md
packaging/aur/: PKGBUILD  README.md
packaging/homebrew/: hvac.rb  slimarr.rb  tdorr.rb
pool/main/: hvac_5.2.1_amd64.deb  hvac_5.2.1_arm64.deb  hvac_5.2.2_amd64.deb  hvac_5.2.2_arm64.deb  hvac_5.2.3_amd64.deb  hvac_5.2.3_arm64.deb  hvac_5.2.5_amd64.deb  hvac_5.2.5_arm64.deb  hvac_5.4.0_amd64.deb  hvac_5.4.0_arm64.deb
promptlog/: 2026-05-10-pipeline-refactor.md  README.md
scripts/: make_test_fixtures.sh  make_test_iso.sh  set-version.sh  toggle-pause.sh  update-apt-repo.sh
src/: cli.rs  config.rs  flags.rs  gpu.rs  iso.rs  main.rs  probe.rs  scanner.rs  setup.rs  telemetry.rs  transcode.rs  ui.rs  util.rs
src/pipeline/: mod.rs  partition.rs  render.rs  replace.rs  scan.rs  worker.rs
tests/: apt_repo.bats  cli_smoke.rs  set_version.bats
