[package]
name = "hvac"
version = "5.1.1"
edition = "2021"
description = "GPU-accelerated media transcoding that I could figure out"
license = "MIT"
repository = "https://github.com/JackDanger/hvac"
homepage = "https://github.com/JackDanger/hvac"
readme = "README.md"
keywords = ["video", "transcode", "hevc", "h265", "ffmpeg"]
categories = ["command-line-utilities", "multimedia::video"]
exclude = ["tests/fixtures/*", "scripts/*", "packaging/*", "logo.svg"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
env_logger = "0.11"
isomage = "0.1"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
