[package]
# The crate name on crates.io is `hvac-transcoder` because the unrelated
# `hvac` crate (a 2018 thermostat controller) holds the short name. The
# installed binary remains `hvac` — see the [[bin]] section below.
name = "hvac-transcoder"
version = "5.2.3"
edition = "2021"
# Minimum Rust we compile against. The `msrv` CI job re-runs the binary
# build + tests on exactly this toolchain so silently-newer-Rust feature
# usage doesn't sneak in. Bump cautiously and bump CHANGELOG with it.
#
# 1.93 (Nov 2025): the real floor is set by transitive deps of
# launchdarkly-server-sdk — specifically `eventsource-client@0.17.4`
# which declares `rust-version = 1.93`. Our own code only needs 1.77
# (C-string literals); without the LD SDK we could go lower. Bumps to
# this field should land alongside a CHANGELOG note so consumers
# understand why their build broke if they pin an older toolchain.
rust-version = "1.93"
description = "GPU-accelerated media transcoder (HEVC/h265 via NVENC, VAAPI, VideoToolbox). Single-binary Tdarr alternative."
license = "MIT"
repository = "https://github.com/JackDanger/hvac"
homepage = "https://github.com/JackDanger/hvac"
readme = "README.md"
keywords = ["video", "transcode", "hevc", "h265", "ffmpeg"]
categories = ["command-line-utilities", "multimedia::video"]
exclude = ["tests/fixtures/*", "scripts/*", "packaging/*", "logo.svg"]

[[bin]]
name = "hvac"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
isomage = "0.1"
launchdarkly-server-sdk = { version = "3", default-features = false, features = ["hyper-rustls-webpki-roots", "event-compression"] }
libc = "0.2"
log = "0.4"
opentelemetry = { version = "0.32", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
name = "hvac"
maintainer = "Jack Danger <jack@jackdanger.com>"
copyright = "2026, Jack Danger <jack@jackdanger.com>"
license-file = ["LICENSE", "0"]
extended-description = """
hvac scans media directories and transcodes video files to highly-compressed
HEVC/h265 using GPU acceleration (NVIDIA NVENC, Intel VAAPI, or Apple
VideoToolbox). Smart-skip avoids re-encoding files that already meet the
target codec/resolution/bitrate."""
depends = "libc6, ffmpeg"
recommends = "vainfo, intel-media-va-driver, mesa-va-drivers"
section = "video"
priority = "optional"
assets = [
    ["config.yaml", "etc/hvac/config.yaml", "644"],
    ["README.md", "usr/share/doc/hvac/README.md", "644"],
    ["LICENSE", "usr/share/doc/hvac/LICENSE", "644"],
]

[package.metadata.deb.variants.aarch64]
# cargo-deb auto-detects target arch; this stanza exists so cross-built
# aarch64 .debs pick up the same assets as the native build.

